--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+#leave vs folder local
+.vs/
+.nuget/
+#leave web config settings local
+web.config
